# fortune-platform

./: .env.example  .gitignore  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
alertmanager/: alertmanager.yml
alertmanager/templates/: default.tmpl
db/: init.sql
desktop/: electron-builder.yml  main.ts  package.json  preload.ts  updater.ts
docs/api/: API.md
docs/deploy/: CONFIG.md  DEPLOY.md  INSTALL.md  MAINTENANCE.md  PERFORMANCE.md  (+1 more)
prometheus/: node-exporter.yml  prometheus.yml
scripts/: backup-db.sh  restore-db.sh
server/: Dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial_tables.py  002_add_checkin_table.py  003_add_checkin_table.py  004_add_settings_column.py  005_add_checkin_table.py
server/app/: main.py
server/app/api/: deps.py
server/app/api/v1/: api.py
server/app/api/v1/endpoints/: auth.py  checkin.py  divination.py  favorites.py  monitor.py  quota.py  settings.py  stats.py  users.py
server/app/core/: ai_config.py  cache.py  config.py  error_handlers.py  exceptions.py  logging.py  redis.py
server/app/db/: session.py
server/app/middleware/: logging.py  metrics.py  quota.py
server/app/models/: base.py  checkin.py  divination.py  favorite.py  quota.py  user.py
server/app/schemas/: checkin.py  divination.py  favorite.py  quota.py  settings.py  user.py
server/app/services/: ai.py  auth.py  checkin.py  divination.py  favorite.py  health.py  quota.py  settings.py  stats.py  user.py
web/: .eslintrc.js  Dockerfile  nginx.conf  package.json  tsconfig.json  vite.config.ts
(+38 files in other folders)
